# bin-diff

./: .gitignore  README.md  bin-diff.scala  bin-diff.test.scala  symbols.ignore
analysis/: BitEquivalence.scala  Demangler.scala  Demangler.test.scala  Disassembler.scala  FunctionComparator.scala  FunctionDiffer.scala  StringExtractor.scala  SymbolComparator.scala  SymbolExtractor.scala
model/: Domain.scala
process/: ProcessRunner.scala
report/: Reporter.scala
test-program/: BUILD.bazel  CMakeLists.txt  MODULE.bazel
test-program/include/: math_utils.h  string_utils.h
test-program/src/: logger.cpp  logger.h  main.cpp  math_utils.cpp  string_utils.cpp
